# DiffFit-3D

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: inference.yaml  train.yaml  train_t4.yaml
configs/data/: dataset.yaml  preprocessing.yaml
configs/model/: garment_unet.yaml  garment_unet_light.yaml  person_unet.yaml  person_unet_light.yaml  vae.yaml
docs/: ARCHITECTURE.md  DATASET_GUIDE.md
models/: stn_warp.py
scripts/: evaluate.py  export_onnx.py  inference.py  preprocess_dataset.py  setup_data.py  train.py
src/data/: __init__.py  dataset.py  pair_sampler.py  transforms.py
src/data/preprocessing/: build_agnostic.py  extract_densepose.py  extract_pose.py  extract_segment.py  extract_smplx.py  render_garment.py
src/inference/: __init__.py  image_tryon.py  postprocess.py  video_tryon.py
src/models/: __init__.py  garment_unet.py  noise_scheduler.py  person_unet.py  tryon_pipeline.py  vae.py
src/models/attention/: __init__.py  cross_attention.py  self_attention.py  spatial_attn.py
src/modules/: __init__.py  agnostic_mask.py  densepose.py  garment_draper.py  garment_encoder.py  mesh_renderer.py  pose_estimator.py  segmentation.py  smplx_estimator.py  warping.py
src/training/: __init__.py  ema.py  losses.py  lr_scheduler.py  trainer.py
src/utils/: __init__.py  image_utils.py  metrics.py  synthid.py  video_utils.py
src/video/: __init__.py  frame_interpolation.py  motion_module.py  physics_prior.py  temporal_attention.py
tests/: test_attention.py  test_pipeline.py  test_warping.py
